# nyc_building_permit_dashboard

./: .gitignore  README.html  README.md  app.py  codebase.md  conftest.py  pyproject.toml  pytest.ini  report.html  run_codeweaver.bat
.github/workflows/: ci.yml
assets/: custom.css  style.css
data/processed/: nyc_hexes.geojson
src/: app.py  app_instance.py  callbacks.py  config.py  data_utils.py  debug.py  layout.py
tests/: test_app.py  test_callbacks.py  test_data_utils.py
